--- a/src/App.css
+++ b/src/App.css
@@ -1,73 +1,76 @@
-.App {
-  text-align: center;
-  font-family: "Poppins", serif;
+body {
+  padding: 10px;
+  margin : 10px;
+  font-family: sans-serif; 
+  background-color: black important!;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App .cards{
+  display: grid;
+  grid-template-columns: 1fr minmax(10git 0px, 20%);
+  padding: 0;
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.root {
+  background-color: #040305;
 }
-
-.App-header {
-  background-color: rgb(76, 76, 151);
-  min-height: 25vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: lavender;
+h1 {
+  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.cards {
+  float: center;
+  width: 90%;
+  margin: 5px;
+  padding: 10px;
+  background-color:#FFFFFF;
+  box-shadow: 0px 0px 1px rgba(12, 26, 75, 0.24), 0px 3px 8px -1px rgba(50, 50, 71, 0.05);
+  border-radius: 4px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cards:hover {
+  float: center;
+  width: 90%;
+  margin: 5px;
+  padding: 10px;
+  background-color:#FFFFFF;
+  box-shadow: 0px 0px 1px rgba(12, 26, 75, 0.24), 8px 10px 8px -1px rgba(50, 50, 71, 0.1);
+  border-radius: 4px;
 }
-
-.btn {
-  height: 50px;
-  background-color: lavender;
-  border-color: lavender;
-  border-radius: 30px;
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-size: 24px;
-  color: rgb(76, 76, 151);
-  width: 320px;
+.img-poster {
+  /* align: center; */
+  height: 300px;
+  width: 300px;
+  border-radius: 4px;
 }
-
-.song-content {
-  border: 8px solid lavender;
-  border-radius: 30px;
-  width: fit-content;
-  text-align: center;
-  margin: 30px;
-  padding: 30px;
-  font-weight: bold;
+input[type=text], select {
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
-
-.Card-list {
-  background-color: rgb(76, 76, 151);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: lavender;
-  width: auto;
+#submit {
+  width: 40%;
+  background-color: #aeaeae;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.box-desc {
+  padding-left: 30px;
+}
+.btn-select {
+  width: 30%;
+  background-color: #aeaeae;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
